--- a/requirements/aind-dog-linux.yml
+++ b/requirements/aind-dog-linux.yml
@@ -59,6 +59,7 @@ dependencies:
   - simplegeneric==0.8.1
   - six==1.10.0
   - tensorflow==1.0.0
+  - tensorflow-gpu==1.0.0
   - terminado==0.6
   - testpath==0.3.1
   - theano==0.9.0
