--- a/requirements/aind-dog-mac.yml
+++ b/requirements/aind-dog-mac.yml
@@ -200,5 +200,6 @@ dependencies:
   - rope-py3k==0.9.4.post1
   - tables==3.3.0
   - tensorflow==1.0.0
+  - tenforflow-gpu==1.0.0
   - theano==0.8.2
   - tqdm==4.11.2
