--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,8 @@
 .DS_Store
 dogImages/
 lfw/
-saved_models/weights.best.from_scratch.hdf5
-saved_models/weights.best.vgg16.hdf5
+saved_models/
+saved_models/
 .ipynb_checkpoints/
-bottleneck_features/DogVGG16Data.npz
+bottleneck_features/
+.idea
