--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,6 @@ saved_models/weights.best.from_scratch.hdf5
 saved_models/weights.best.vgg16.hdf5
 .ipynb_checkpoints/
 bottleneck_features/DogVGG16Data.npz
+*.zip
+*.npz
+.idea/*
